--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header img {
   width: 100%;
 }
-.header .more_inf {
+.header .about {
   font-family: fantasy, cursive;
 }
 
@@ -34,31 +34,16 @@ body {
 .task__wrapper {
   display: flex;
 }
-ul {
+
+.task_list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.task_item {
   list-style:none;
 }
-input,button{
-  outline:none;
-}
-button {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-button:hover {
-  color: #3a3a3a;
-}
-/* Heading */
-h3,
-label[for="new-task"] {
+.list_title {
+  list-style:none;
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +52,38 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+
+input,
+button{
+  outline:none;
+}
+
+.btn {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #3a3a3a;
+}
+
+/* Heading */
+.new-task__label {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,12 +95,12 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__label {
   display: block;
   margin: 0 0 20px;
 }
