--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.task_item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -118,47 +118,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task_item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task_item > input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.task_item > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task_item >    input[type="text"] {
   width: 226px
 }
-button.delete img {
+.btn.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task_list.completed_list .completed-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task_list .task_item input[type=text] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+.task_list .task_item.editMode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+.task_list .task_item.editMode label {
   display:none;
 }
