--- a/style.css
+++ b/style.css
@@ -4,33 +4,39 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header img {
   width: 100%;
 }
+
 .header .about {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
+  .header { text-align: center;
+  }
 }
-}
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .task__wrapper {
   display: flex;
 }
@@ -39,9 +45,11 @@ body {
   margin:0;
   padding: 0px;
 }
+
 .task_item {
   list-style:none;
 }
+
 .list_title {
   list-style:none;
   color: #333;
@@ -95,6 +103,7 @@ button{
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .input:focus {
   color: #333;
 }
@@ -104,6 +113,7 @@ button{
   display: block;
   margin: 0 0 20px;
 }
+
 input#new-task {
   width: 318px;
 }
@@ -118,6 +128,7 @@ input#new-task {
   justify-content: space-between;
   align-items: center;
 }
+
 .task_item > * {
   vertical-align: middle;
 }
@@ -125,20 +136,24 @@ input#new-task {
 .task_item > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 .task_item > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.task_item >    input[type="text"] {
+
+.task_item > .text_input {
   width: 226px
 }
+
 .btn.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn.delete img:hover {
   transform: rotateZ(0);
 }
@@ -150,11 +165,11 @@ input#new-task {
 }
 
 /* Edit Task */
-.task_list .task_item input[type=text] {
+.task_list .task_item .text_input {
   display:none
 }
 
-.task_list .task_item.editMode input[type=text] {
+.task_list .task_item.editMode .text_input {
   display:inline-block;
   width:224px
 }
