--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ input#new-task {
   margin: 0 10px;
 }
 
-.task_item > label {
+.task_item > .task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
